[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tic_Tac_Toe.gd" type="Script" id=1]
[ext_resource path="res://Tic_Tac_Toe.png" type="Texture" id=2]
[ext_resource path="res://Slot.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[node name="Tic_Tac_Toe" type="RigidBody2D" groups=[
"object",
]]
z_index = -1
input_pickable = true
collision_layer = 2
collision_mask = 2
gravity_scale = 10.0
contacts_reported = 10
contact_monitor = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Slots" type="Node2D" parent="."]

[node name="Slot" type="Area2D" parent="Slots"]
position = Vector2( -64, -64 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Slots/Slot"]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot"]
shape = SubResource( 2 )

[node name="Slot2" type="Area2D" parent="Slots"]
position = Vector2( 0, -64 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Slots/Slot2"]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot2"]
shape = SubResource( 2 )

[node name="Slot3" type="Area2D" parent="Slots"]
position = Vector2( 64, -64 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Slots/Slot3"]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot3"]
shape = SubResource( 2 )

[node name="Slot4" type="Area2D" parent="Slots"]
position = Vector2( -64, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Slots/Slot4"]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot4"]
shape = SubResource( 2 )

[node name="Slot5" type="Area2D" parent="Slots"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Slots/Slot5"]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot5"]
shape = SubResource( 2 )

[node name="Slot6" type="Area2D" parent="Slots"]
position = Vector2( 64, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Slots/Slot6"]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot6"]
shape = SubResource( 2 )

[node name="Slot7" type="Area2D" parent="Slots"]
position = Vector2( -64, 64 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Slots/Slot7"]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot7"]
shape = SubResource( 2 )

[node name="Slot8" type="Area2D" parent="Slots"]
position = Vector2( 0, 64 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Slots/Slot8"]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot8"]
shape = SubResource( 2 )

[node name="Slot9" type="Area2D" parent="Slots"]
position = Vector2( 64, 64 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Slots/Slot9"]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot9"]
shape = SubResource( 2 )

[node name="Win_Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Slots/Slot" to="Slots/Slot" method="_body_entered"]
[connection signal="body_exited" from="Slots/Slot" to="Slots/Slot" method="_body_exited"]
[connection signal="body_entered" from="Slots/Slot2" to="Slots/Slot2" method="_body_entered"]
[connection signal="body_exited" from="Slots/Slot2" to="Slots/Slot2" method="_body_exited"]
[connection signal="body_entered" from="Slots/Slot3" to="Slots/Slot3" method="_body_entered"]
[connection signal="body_exited" from="Slots/Slot3" to="Slots/Slot3" method="_body_exited"]
[connection signal="body_entered" from="Slots/Slot4" to="Slots/Slot4" method="_body_entered"]
[connection signal="body_exited" from="Slots/Slot4" to="Slots/Slot4" method="_body_exited"]
[connection signal="body_entered" from="Slots/Slot5" to="Slots/Slot5" method="_body_entered"]
[connection signal="body_exited" from="Slots/Slot5" to="Slots/Slot5" method="_body_exited"]
[connection signal="body_entered" from="Slots/Slot6" to="Slots/Slot6" method="_body_entered"]
[connection signal="body_exited" from="Slots/Slot6" to="Slots/Slot6" method="_body_exited"]
[connection signal="body_entered" from="Slots/Slot7" to="Slots/Slot7" method="_body_entered"]
[connection signal="body_exited" from="Slots/Slot7" to="Slots/Slot7" method="_body_exited"]
[connection signal="body_entered" from="Slots/Slot8" to="Slots/Slot8" method="_body_entered"]
[connection signal="body_exited" from="Slots/Slot8" to="Slots/Slot8" method="_body_exited"]
[connection signal="body_entered" from="Slots/Slot9" to="Slots/Slot9" method="_body_entered"]
[connection signal="body_exited" from="Slots/Slot9" to="Slots/Slot9" method="_body_exited"]
[connection signal="timeout" from="Win_Timer" to="." method="_on_Win_Timer_timeout"]
